--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,2 +1,6 @@
 @import "normalize";
 @import "typografic.scss";
+@import "components/container.scss";
+@import "components/underline.scss";
+@import "components/button.scss";
+@import "header.scss";
