--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,1 +1,86 @@
+$dark-red: #e74c3c;
+$nav-text-size: 0.875rem;
+
+@mixin bg-image($path, $size: cover, $pos: center, $repeat: no-repeat) {
+  background-image: url($path);
+  background-size: $size;
+  background-position: $pos;
+  background-repeat: $repeat;
+}
+
+@mixin center-flex($position) {
+  display: flex;
+  @if ($position == 'all') {
+    justify-content: center;
+    align-items: center;
+  }
+  @else if($position == 'hor') {
+    justify-content: center;
+  }
+  @else if($position == 'ver') {
+    align-items: center;
+  }
+}
+
+.header {
+  @include bg-image('img/header-bg.png', cover, center, no-repeat);
+  padding-bottom: 230px;
+}
+
 // NAVIGATION BLOCK
+.navigation {
+  display: flex;
+  justify-content: flex-end;
+  font-family: OpenSansR;
+  padding-top: 3.75rem;
+}
+
+.navigation__item {
+  margin-right: 1rem;
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
+.navigation__link {
+  display: block;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #fff;
+  padding-bottom: 1rem;
+  font-size: $nav-text-size;
+  transition: all .2s linear;
+  border-bottom: 1px solid transparent;
+  &:hover {
+    color: $dark-red;
+    border-bottom: 1px solid $dark-red;
+  }
+}
+
+// TITLE BLOCK
+.header-section{
+  text-align: center;
+  color: #fff;
+  padding-top: 16rem;
+}
+
+.header-section__subtitle {
+  font-size: 1.5rem;
+  font-family: SourceSansProR;
+  font-weight: normal;
+  margin: 0 0 3rem 0;
+}
+
+.header-section__title {
+  font-size: 4.5rem;
+  font-family: OpenSansB;
+  text-transform: uppercase;
+  letter-spacing: .3rem;
+  margin: 0 0 3rem 0;
+}
+
+.header-section__paragraph {
+  font-size: 0.875rem;
+  padding: 0 20rem;
+  margin: 0;
+}
