--- a/src/sass/_typografic.scss
+++ b/src/sass/_typografic.scss
@@ -2,3 +2,13 @@
   font-family: OpenSansR;
   src: url(fonts/Open_Sans/OpenSans-Regular.ttf);
 }
+
+@font-face {
+  font-family: OpenSansB;
+  src: url(fonts/Open_Sans/OpenSans-Bold.ttf);
+}
+
+@font-face {
+  font-family: SourceSansProR;
+  src: url(fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf);
+}
