--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -24,7 +24,12 @@ $nav-text-size: 0.875rem;
 
 .header {
   @include bg-image('img/header-bg.png', cover, center, no-repeat);
-  padding-bottom: 230px;
+  padding-bottom: 13.125rem;
+  position: relative;
+  z-index: 0;
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+    background-image: url('img/header-bg@2x.png');
+  }
 }
 
 // NAVIGATION BLOCK
@@ -83,4 +88,17 @@ $nav-text-size: 0.875rem;
   font-size: 0.875rem;
   padding: 0 20rem;
   margin: 0;
+}
+
+// ANCHOR LOGO
+.anchor-logo {
+  position: absolute;
+  width: 4rem;
+  height: 4rem;
+  background-color: #f4f5f9;
+  border-radius: 50%;
+  left: 50%;
+  bottom: 0;
+  transform: translate(-50%, 50%);
+  @include bg-image('img/anchor.svg', 50% 50%, center, no-repeat);
 }
