--- a/src/sass/_typografic.scss
+++ b/src/sass/_typografic.scss
@@ -1,3 +1,4 @@
+// Open Sans Pro fonts
 @font-face {
   font-family: OpenSansR;
   src: url(fonts/Open_Sans/OpenSans-Regular.ttf);
@@ -9,6 +10,17 @@
 }
 
 @font-face {
+  font-family: OpenSansS;
+  src: url(fonts/Source_Sans_Pro/SourceSansPro-SemiBold.ttf);
+}
+
+// Source Sans Pro fonts
+@font-face {
   font-family: SourceSansProR;
   src: url(fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf);
+}
+
+@font-face {
+  font-family: SourceSansProL;
+  src: url(fonts/Source_Sans_Pro/SourceSansPro-Light.ttf);
 }
