--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -4,4 +4,6 @@
 @import "components/underline.scss";
 @import "components/button.scss";
 @import "header.scss";
+@import "card-section.scss";
 @import "components/card.scss";
+@import "history-section.scss";
