--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,4 +1,5 @@
 @import "normalize";
+@import "variables.scss";
 @import "typografic.scss";
 @import "components/container.scss";
 @import "components/underline.scss";
@@ -7,3 +8,4 @@
 @import "card-section.scss";
 @import "components/card.scss";
 @import "history-section.scss";
+@import "services.scss";
