--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,4 +1,3 @@
-$dark-red: #e74c3c;
 $nav-text-size: 0.875rem;
 
 @mixin bg-image($path, $size: cover, $pos: center, $repeat: no-repeat) {
@@ -96,7 +95,7 @@ $nav-text-size: 0.875rem;
   position: absolute;
   width: 4rem;
   height: 4rem;
-  background-color: #f4f5f9;
+  background-color: $icon-bg-color;
   border-radius: 50%;
   left: 50%;
   bottom: 0;
