--- a/src/sass/_typografic.scss
+++ b/src/sass/_typografic.scss
@@ -1,5 +1,3 @@
-$light-grey: #999999;
-
 // Open Sans Pro fonts
 @font-face {
   font-family: OpenSansR;
@@ -33,7 +31,7 @@ $light-grey: #999999;
 }
 
 p {
-  color: $light-grey;
+  color: $p-color;
   line-height: 1.5;
   margin: 0;
 }
