--- a/src/sass/components/_underline.scss
+++ b/src/sass/components/_underline.scss
@@ -14,6 +14,10 @@
   background-color: #fff;
 }
 
+.underline__line--black {
+  background-color: #000;
+}
+
 .underline__circle {
   width: 0.5rem;
   height: 0.5rem;
