--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -9,3 +9,5 @@
 @import "components/card.scss";
 @import "history-section.scss";
 @import "services.scss";
+@import "pricing.scss";
+@import "components/title.scss";
