--- a/src/sass/_typografic.scss
+++ b/src/sass/_typografic.scss
@@ -11,7 +11,12 @@
 
 @font-face {
   font-family: OpenSansS;
-  src: url(fonts/Source_Sans_Pro/SourceSansPro-SemiBold.ttf);
+  src: url(fonts/Open_Sans/OpenSans-SemiBold.ttf);
+}
+
+@font-face {
+  font-family: OpenSansSI;
+  src: url(fonts/Open_Sans/OpenSans-SemiBoldItalic.ttf);
 }
 
 // Source Sans Pro fonts
@@ -28,6 +33,11 @@
 @font-face {
   font-family: SourceSansProB;
   src: url(fonts/Source_Sans_Pro/SourceSansPro-Bold.ttf);
+}
+
+@font-face {
+  font-family: SourceSansProS;
+  src: url(fonts/Source_Sans_Pro/SourceSansPro-SemiBold.ttf);
 }
 
 p {
