--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -8,3 +8,10 @@
   display: flex;
   justify-content: space-between;
 }
+
+.container--flex-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
