added company logo to clients

--- a/src/sass/_history-section.scss
+++ b/src/sass/_history-section.scss
@@ -37,6 +37,7 @@
 .history-section__paragraph {
   font-family: SourceSansProR;
   font-size: 0.875rem;
+  line-height: 2;
   &:first-of-type {
     margin-bottom: 2rem;
   }
