--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,6 +1,7 @@
 @import "normalize";
 @import "variables.scss";
 @import "typografic.scss";
+@import "base.scss";
 @import "components/container.scss";
 @import "components/underline.scss";
 @import "components/button.scss";
