--- a/src/sass/_clients.scss
+++ b/src/sass/_clients.scss
@@ -12,10 +12,29 @@
 
 .clients-container__client-block {
   flex-basis: 18%;
-  padding: 3rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #fff;
   margin-bottom: 2rem;
+  display: block;
+  text-decoration: none;
+  fill: #bcbcbc;
+  transition: all .5s linear;
   &:nth-child(n+6) {
     margin-bottom: 0
   }
+  &:hover {
+    background-color: $red;
+  }
+  &:hover .clients-container__logo {
+    fill: #fff;
+  }
+}
+
+.clients-container__logo {
+  display: block;
+  width: 100%;
+  height: 6rem;
+  padding: 1rem;
 }
