--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -24,8 +24,8 @@ $nav-text-size: 0.875rem;
 .header {
   @include bg-image('img/header/header-bg.png', cover, center, no-repeat);
   padding-bottom: 13.125rem;
+  padding-top: 3.75rem;
   position: relative;
-  z-index: 0;
   @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
     background-image: url('img/header/header-bg@2x.png');
   }
@@ -36,7 +36,7 @@ $nav-text-size: 0.875rem;
   display: flex;
   justify-content: flex-end;
   font-family: OpenSansR;
-  padding-top: 3.75rem;
+  margin-bottom: 16rem;
 }
 
 .navigation__item {
@@ -65,7 +65,6 @@ $nav-text-size: 0.875rem;
 .header-section{
   text-align: center;
   color: #fff;
-  padding-top: 16rem;
 }
 
 .header-section__subtitle {
@@ -84,6 +83,7 @@ $nav-text-size: 0.875rem;
 }
 
 .header-section__paragraph {
+  font-family: OpenSansR;
   font-size: 0.875rem;
   padding: 0 20rem;
   margin: 0;
