added retina image

--- a/src/sass/_blog.scss
+++ b/src/sass/_blog.scss
@@ -16,7 +16,7 @@ $arr-path: (
 
 .blog-section {
   padding: 8rem 0;
-  background-color: $icon-bg-color;
+  background-color: $dark-white;
 }
 
 .gallery-container {
