--- a/src/sass/_services.scss
+++ b/src/sass/_services.scss
@@ -1,10 +1,16 @@
+$services-left-block-bg: $light-black;
+$services-title-before: $red;
+$services-subtitle: $red;
+$services-icon: $pink;
+$services-icon-bg: $dark-white;
+
 .services-container {
   display: flex;
 }
 
 .services-container__left-block {
   flex-basis: 50%;
-  background-color: $light-black;
+  background-color: $services-left-block-bg;
   padding: 8rem 0;
 }
 
@@ -26,7 +32,7 @@
     display: block;
     content: '';
     width: .3rem;
-    background-color: $red;
+    background-color: $services-title-before;
     margin-left: 1.5rem;
     order: 1;
   }
@@ -43,7 +49,7 @@
 
 .services-container__subtitle {
   font-family: OpenSansS;
-  color: $red;
+  color: $services-subtitle;
   text-transform: uppercase;
   font-size: 1.125rem;
   margin: 0 0 .5rem 0;
@@ -60,7 +66,7 @@
   top: 0;
   transform: translate(50%, 30%);
   border-radius: 50%;
-  background-color: $icon-bg-color;
+  background-color: $services-icon-bg;
   box-shadow: 0 0 0 3px #7b7c7d;
 }
 
@@ -70,13 +76,13 @@
   width: 3rem;
   height: 3rem;
   padding: .8rem;
-  fill: $pink;
+  fill: $services-icon;
 }
 
 .services-container__right-block {
   flex-basis: 50%;
-  background-image: url('img/services/tablet.png');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  @include bg-image('img/services/tablet.png', cover, center, no-repeat);
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+    background-image: url('img/services/tablet@2x.png');
+  }
 }
