--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,8 +1,9 @@
-$grey: #6a6a6a;
 $red: #e74c3c;
+$white: #fff;
+$grey: #6a6a6a;
 $pink: #e95b4d;
 $dark-red: #e74c3c;
 $light-black: #202020;
 $light-grey: #e5e5e5;
-$p-color: #999999;
-$icon-bg-color: #f4f5f9;
+$dark-grey: #999999;
+$dark-white: #f4f5f9;
