--- a/src/sass/_clients.scss
+++ b/src/sass/_clients.scss
@@ -1,7 +1,10 @@
+$clients-section-bg: $dark-white;
+$clients-icon: #bcbcbc;
+
 .clients-section {
   border-bottom: 1px solid $light-grey;
   padding: 8rem 0;
-  background-color: $icon-bg-color;
+  background-color: $clients-section-bg;
 }
 
 .clients-container {
@@ -19,7 +22,7 @@
   margin-bottom: 2rem;
   display: block;
   text-decoration: none;
-  fill: #bcbcbc;
+  fill: $clients-icon;
   transition: all .5s linear;
   &:nth-child(n+6) {
     margin-bottom: 0
