--- a/src/sass/_history-section.scss
+++ b/src/sass/_history-section.scss
@@ -1,3 +1,6 @@
+$history-title: $grey;
+$history-title-before: $red;
+
 .history-section {
   padding: 8rem 0;
 }
@@ -23,13 +26,13 @@
   font-family: SourceSansProB;
   font-size: 2.25rem;
   text-transform: uppercase;
-  color: $grey;
+  color: $history-title;
   margin: 0 0 2rem 0;
   &::before {
     display: block;
     content: '';
     width: .3rem;
-    background-color: $red;
+    background-color: $history-title-before;
     margin-right: 1.5rem;
   }
 }
