--- a/src/sass/_blog.scss
+++ b/src/sass/_blog.scss
@@ -1,19 +1,3 @@
-$arr-path: (
-  first: "img/blog/blog-img-1.png",
-  second: "img/blog/blog-img-2.png",
-  third: "img/blog/blog-img-3.png",
-  fourth: "img/blog/blog-img-4.png"
-);
-
-@mixin gallery-bg() {
-  @each $modifier, $path in $arr-path {
-    &--#{$modifier} {
-      @extend %img;
-      background-image: url(#{$path});
-    }
-  }
-}
-
 .blog-section {
   padding: 8rem 0;
   background-color: $dark-white;
@@ -43,16 +27,14 @@ $arr-path: (
   }
 }
 
-
-%img {
-  flex-basis: 50%;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+.gallery-container__img {
+  display: block;
+  width: 100%;
+  height: auto;
 }
 
-.gallery-container__img {
-  @include gallery-bg();
+.gallery-container__img-block {
+  flex-basis: 50%;
 }
 
 .gallery-container__body {
