--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -56,6 +56,10 @@ $menu-link: $red;
   font-size: $nav-text-size;
   transition: all .2s linear;
   border-bottom: 1px solid transparent;
+  margin-right: 1rem;
+  &:last-child {
+    margin-right: 0;
+  }
   &:hover {
     color: $menu-link;
     border-bottom: 1px solid $menu-link;
