--- a/src/sass/components/_underline.scss
+++ b/src/sass/components/_underline.scss
@@ -19,8 +19,8 @@
     left: 0;
     transform: translate(calc(-100% - 1rem),-50%);
     content: "";
-    width: 3rem;
-    height: 2px;
+    width: 5rem;
+    height: 1px;
     background-color: #fff;
   }
   &::after {
@@ -30,12 +30,21 @@
     right: 0;
     transform: translate(calc(100% + 1rem),-50%);
     content: "";
-    width: 3rem;
-    height: 2px;
+    width: 5rem;
+    height: 1px;
     background-color: #fff;
   }
 }
 
 .underline--mb-3 {
   margin-bottom: 3rem;
+}
+
+.underline-container__underline--black {
+  &::before {
+    background-color: $dark-grey;
+  }
+  &::after {
+    background-color: $dark-grey;
+  }
 }
